...
import kotlinx.coroutines.launch

const val popupMessagesHeadingTestTag = "popupMessagesHeading"
const val popupMessagesExample1HeadingTestTag = "popupMessagesExample1Heading"
const val popupMessagesExample1ButtonTestTag = "popupMessagesExample1Button"
const val popupMessagesExample2HeadingTestTag = "popupMessagesExample2Heading"
const val popupMessagesExample2ButtonTestTag = "popupMessagesExample2Button"
const val popupMessagesExample3HeadingTestTag = "popupMessagesExample3Heading"
const val popupMessagesExample3ButtonTestTag = "popupMessagesExample3Button"
const val popupMessagesExample4HeadingTestTag = "popupMessagesExample4Heading"
const val popupMessagesExample4ButtonTestTag = "popupMessagesExample4Button"
const val popupMessagesExample5HeadingTestTag = "popupMessagesExample5Heading"
const val popupMessagesExample5ButtonTestTag = "popupMessagesExample5Button"
const val popupMessagesExample6HeadingTestTag = "popupMessagesExample6Heading"
const val popupMessagesExample6ButtonTestTag = "popupMessagesExample6Button"
const val popupMessagesExample6AlertDialogTestTag = "popupMessagesExample6AlertDialog"
const val popupMessagesExample6AlertDialogActionButtonTestTag = "popupMessagesExample6AlertDialogActionButton"
const val popupMessagesExample6AlertDialogDismissButtonTestTag = "popupMessagesExample6AlertDialogDismissButton"
const val popupMessagesExample6ShowMoreAlertDialogTestTag = "popupMessagesExample6ShowMoreAlertDialog"
...
